<resources>
    <string name="app_name">Korepetytio</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="wejd_jako_go">Wejdź jako gość</string>
    <string name="todo">TODO</string>
    <string name="logowanie">Logowanie</string>
    <string name="wr">Wróć</string>
    <string name="todo1">TODO</string>
    <string name="api">Api</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="username">UserName</string>
    <string name="zarejestruj_si">Zarejestruj się</string>
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="set">Set</string>
</resources>